...
    <!--    Menu buttons-->
    <string name="recipe_engine">Recipe Engine</string>
    <string name="take_photo">Add to Pantry</string>
    <string name="flavor_profile">Flavor Profile</string>
    <string name="req_ingredient">Request Ingredient</string>
    <string name="cook_together">Cook with others</string>
    <string name="recipe_review">Recipe Reviews</string>
    <string name="grocery_upload">Upload Groceries</string>
    <string name="signout">Sign out</string>

    <string name="read_more">Read more</string>
    <string name="write_rev">Write your own review</string>
    <string name="title">Title</string>
...
    <string name="Loremipsum">Lorem Ipsum</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="like_info">Rating count is only updated upon refreshing the recipes activity.
    Please go to the main menu, and then reopen this review to see the count increase. </string>

    <string name="shared_pref_filename">com.beaker.reciperoulette.TOKEN</string>


    <string name="req_ingred">Request Ingredients</string>
    <string name="donate_ingred">Donate Ingredients</string>
    <string name="donate">Donate</string>
    <string name="contact">Contact Details</string>
...
    <string name="menu_signout">SIGNOUT</string>

    <!--    Server Details-->
    <string name="server_wss_url">wss://cpen321-reciperoulette.westus.cloudapp.azure.com</string>

    <!--Shared Preferences-->
    <string name="prf_token">TOKEN</string>
    <string name="prf_eml">EMAIL</string>
    <string name="prf_fcmtoken">FCMTOKEN</string>
    <string name="prf_signin_time">SIGNINTIME</string>

    <string name="prf_token_def">NOTOKEN</string>
    <string name="prf_eml_def">NOEMAIL</string>

...
